# Taran

./: .clippy.toml  .editorconfig  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.claude/: settings.local.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md_old  SETUP_GUIDE.md  settings.yml
.github/workflows/: ci.yml  release.yml
docs/: FAZA_0.md  PLAN.md
examples/: basic_http.toml
taran-cli/: Cargo.toml
taran-cli/src/: cli.rs  main.rs
taran-config/: Cargo.toml
taran-config/src/: duration.rs  error.rs  lib.rs  scenario.rs
taran-core/: Cargo.toml
taran-core/src/: error.rs  lib.rs  model.rs  runner.rs  traits.rs
taran-core/tests/: integration_test.rs
taran-metrics/: Cargo.toml
taran-metrics/src/: collector.rs  error.rs  lib.rs
taran-protocols/: Cargo.toml
taran-protocols/src/: error.rs  http.rs  lib.rs
taran-report/: Cargo.toml
taran-report/src/: console.rs  error.rs  lib.rs
taran-script/: Cargo.toml
taran-script/src/: error.rs  lib.rs
