[workspace]
resolver = "2"
members = [
    "taran-cli",
    "taran-core",
    "taran-config",
    "taran-metrics",
    "taran-report",
    "taran-script",
    "taran-protocols",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Taran Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shaqal7/Taran"
homepage = "https://github.com/Shaqal7/Taran"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Scripting
rhai = { version = "1.19", features = ["sync"] }

# Metrics
hdrhistogram = "7.5"

# Testing
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
