[package]
name = "taran-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
taran-config = { path = "../taran-config" }
taran-metrics = { path = "../taran-metrics" }
taran-protocols = { path = "../taran-protocols" }

# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
wiremock = { workspace = true }
