[package]
name = "taran-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
taran-metrics = { path = "../taran-metrics" }

# Workspace dependencies
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
